feat(views): use pre element where appropriate

--- a/app/views/article.html
+++ b/app/views/article.html
@@ -18,7 +18,7 @@
     </div>
   </header>
   <div class="text-right container">
-    <p dir="rtl" ng-bind="vm.article.body" ng-hide="vm.isEditing()"></p>
+    <pre dir="rtl" ng-bind="vm.article.body" ng-hide="vm.isEditing()"></pre>
     <div class="form-group" dir="rtl" ng-show="vm.isEditing()">
       <label dir="rtl" for="articleBody">المحتوى</label>
       <textarea class="form-control" dir="rtl" id="articleBody" name="articleBody" ng-model="vm.article.body"
