--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -10,7 +10,8 @@
       </header>
       <div class="panel-body">
         <p dir="rtl">
-          <span ng-bind="article.body | limitTo:255"></span><a ng-href="#/article/{{article.$id}}">...</a>
+          <pre dir="rtl" ng-bind="article.body | limitTo:255"></pre>
+          <a dir="rtl" ng-href="#/article/{{article.$id}}">المزيد...</a>
         </p>
       </div>
       <footer class="panel-footer">
