feat(views): add breadcrumbs to more pages

--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -2,6 +2,13 @@
   <h1>مقالات</h1>
 </section>
 
+<div class="container" dir="rtl">
+  <ol class="breadcrumb">
+    <li><a href="#/">الصفحة الرئيسية</a></li>
+    <li class="active">مقالات</li>
+  </ol>
+</div>
+
 <section class="container text-right">
   <div class="col-md-4" ng-repeat="article in articlesCtrl.articles">
     <article class="panel panel-default">
