--- a/app/views/quotes.html
+++ b/app/views/quotes.html
@@ -2,6 +2,13 @@
   <h1>مقتطفات</h1>
 </section>
 
+<div class="container" dir="rtl">
+  <ol class="breadcrumb">
+    <li><a href="#/">الصفحة الرئيسية</a></li>
+    <li class="active">مقتطفات</li>
+  </ol>
+</div>
+
 <section class="container text-center">
   <article class="panel panel-default" ng-repeat="quote in quotesCtrl.quotes">
     <div class="panel-body" dir="rtl">
