--- a/app/views/article.html
+++ b/app/views/article.html
@@ -1,26 +1,27 @@
 <header class="page-header">
-  <div class="container" dir="rtl">
-    <ol class="breadcrumb">
-      <li><a href="#/">الصفحة الرئيسية</a></li>
-      <li><a href="#/articles">مقالات</a></li>
-      <li class="active" ng-bind="vm.article.title"></li>
-    </ol>
-  </div>
-</header>
-
-<article>
   <header>
     <h1 class="text-center" dir="rtl" ng-bind="vm.article.title" ng-hide="vm.isEditing()"></h1>
     <div class="form-group container" dir="rtl" ng-show="vm.isEditing()">
-      <label dir="rtl" for="articleTitle">العنوان</label>
+      <label class="sr-only" dir="rtl" for="articleTitle">العنوان</label>
       <input type="text" class="form-control" dir="rtl" id="articleTitle" name="articleTitle"
              ng-model="vm.article.title" placeholder="العنوان" autofocus required>
     </div>
   </header>
+</header>
+
+<div class="container" dir="rtl">
+  <ol class="breadcrumb">
+    <li><a href="#/">الصفحة الرئيسية</a></li>
+    <li><a href="#/articles">مقالات</a></li>
+    <li class="active" ng-bind="vm.article.title"></li>
+  </ol>
+</div>
+
+<article>
   <div class="text-right container">
     <pre dir="rtl" ng-bind="vm.article.body" ng-hide="vm.isEditing()"></pre>
     <div class="form-group" dir="rtl" ng-show="vm.isEditing()">
-      <label dir="rtl" for="articleBody">المحتوى</label>
+      <label class="sr-only" dir="rtl" for="articleBody">المحتوى</label>
       <textarea class="form-control" dir="rtl" id="articleBody" name="articleBody" ng-model="vm.article.body"
                 placeholder="المحتوى" required></textarea>
     </div>
