feat(views): use TinyMCE

--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -8,20 +8,13 @@
     <li class="active">مقالات</li>
   </ol>
 </div>
-
-<section class="container text-right">
+<section class="container">
   <div ng-repeat="article in articlesCtrl.articles">
     <article class="panel panel-default">
-      <header class="panel-heading">
-        <a ng-href="#/article/{{article.$id}}" dir="rtl" ng-bind="article.title"></a>
-      </header>
-      <div class="panel-body">
-        <p dir="rtl">
-          <p dir="rtl" ng-bind-html="article.body | limitTo:255"></p>
-          <a dir="rtl" ng-href="#/article/{{article.$id}}">المزيد...</a>
-        </p>
+      <div class="panel-body text-center">
+        <a dir="rtl" ng-href="#/article/{{article.$id}}" ng-bind="article.title"></a>
       </div>
-      <footer class="panel-footer">
+      <footer class="panel-footer text-center">
         <div class="btn-group">
           <button type="button" class="btn btn-sm btn-danger"
                   ng-click="articlesCtrl.articles.$remove(article)">حذف</button>
@@ -59,7 +52,7 @@
           <div class="form-group">
             <label for="articleBody">المحتوى</label>
             <textarea id="articleBody" class="form-control" placeholder="المحتوى" name="articleBody"
-                      ng-model="article.body" rows="2" required></textarea>
+                      ng-model="article.body" ui-tinymce required></textarea>
           </div>
         </div>
         <div class="modal-footer">
