Revert "feat(views): use ng-bind-html when appropriate"
This reverts commit 31df76b57192f556e2d72657a1ed626e5b487402.

--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -17,7 +17,7 @@
       </header>
       <div class="panel-body">
         <p dir="rtl">
-          <p dir="rtl" ng-bind-html="article.body | limitTo:255"></p>
+          <pre dir="rtl" ng-bind="article.body | limitTo:255"></pre>
           <a dir="rtl" ng-href="#/article/{{article.$id}}">المزيد...</a>
         </p>
       </div>
