feat(views): use ckeditor

--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -9,19 +9,13 @@
   </ol>
 </div>
 
-<section class="container text-right">
+<section class="container">
   <div ng-repeat="article in articlesCtrl.articles">
-    <article class="panel panel-default">
-      <header class="panel-heading">
-        <a ng-href="#/article/{{article.$id}}" dir="rtl" ng-bind="article.title"></a>
-      </header>
+    <article class="panel panel-default text-center">
       <div class="panel-body">
-        <p dir="rtl">
-          <pre dir="rtl" ng-bind="article.body | limitTo:255"></pre>
-          <a dir="rtl" ng-href="#/article/{{article.$id}}">المزيد...</a>
-        </p>
+        <a ng-href="#/article/{{article.$id}}" dir="rtl" ng-bind="article.title"></a>
       </div>
-      <footer class="panel-footer">
+      <footer class="panel-footer text-center">
         <div class="btn-group">
           <button type="button" class="btn btn-sm btn-danger"
                   ng-click="articlesCtrl.articles.$remove(article)">حذف</button>
@@ -59,7 +53,7 @@
           <div class="form-group">
             <label for="articleBody">المحتوى</label>
             <textarea id="articleBody" class="form-control" placeholder="المحتوى" name="articleBody"
-                      ng-model="article.body" rows="2" required></textarea>
+                      ng-model="article.body" ckeditor="articlesCtrl.CKEDITOR_OPTIONS" required></textarea>
           </div>
         </div>
         <div class="modal-footer">
