fix(views): article.html

--- a/app/views/article.html
+++ b/app/views/article.html
@@ -33,7 +33,7 @@
     </div>
     <div class="btn-group" ng-show="vm.isEditing()">
       <button type="button" class="btn btn-sm btn-danger" ng-click="vm.destroy()">حذف</button>
-      <button type="button" class="btn btn-sm btn-primary" ng-click="vm.save()">حفظ</a>
+      <button type="button" class="btn btn-sm btn-primary" ng-click="vm.save()">حفظ</button>
     </div>
   </footer>
 </article>
