--- a/app/views/article.html
+++ b/app/views/article.html
@@ -19,11 +19,11 @@
 
 <article>
   <div class="text-right container">
-    <div dir="rtl" ng-bind-html="vm.article.body" ng-hide="vm.isEditing()"></div>
+    <pre dir="rtl" ng-bind="vm.article.body" ng-hide="vm.isEditing()"></pre>
     <div class="form-group" dir="rtl" ng-show="vm.isEditing()">
       <label class="sr-only" dir="rtl" for="articleBody">المحتوى</label>
       <textarea class="form-control" dir="rtl" id="articleBody" name="articleBody" ng-model="vm.article.body"
-                placeholder="المحتوى" ckeditor="vm.CKEDITOR_OPTIONS" required></textarea>
+                placeholder="المحتوى" required></textarea>
     </div>
   </div>
   <footer class="text-center">
