--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -9,13 +9,19 @@
   </ol>
 </div>
 
-<section class="container">
+<section class="container text-right">
   <div ng-repeat="article in articlesCtrl.articles">
-    <article class="panel panel-default text-center">
-      <div class="panel-body">
+    <article class="panel panel-default">
+      <header class="panel-heading">
         <a ng-href="#/article/{{article.$id}}" dir="rtl" ng-bind="article.title"></a>
+      </header>
+      <div class="panel-body">
+        <p dir="rtl">
+          <pre dir="rtl" ng-bind="article.body | limitTo:255"></pre>
+          <a dir="rtl" ng-href="#/article/{{article.$id}}">المزيد...</a>
+        </p>
       </div>
-      <footer class="panel-footer text-center">
+      <footer class="panel-footer">
         <div class="btn-group">
           <button type="button" class="btn btn-sm btn-danger"
                   ng-click="articlesCtrl.articles.$remove(article)">حذف</button>
@@ -53,7 +59,7 @@
           <div class="form-group">
             <label for="articleBody">المحتوى</label>
             <textarea id="articleBody" class="form-control" placeholder="المحتوى" name="articleBody"
-                      ng-model="article.body" ckeditor="articlesCtrl.CKEDITOR_OPTIONS" required></textarea>
+                      ng-model="article.body" rows="2" required></textarea>
           </div>
         </div>
         <div class="modal-footer">
