feat(views): install and use angular-elastic

--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -53,7 +53,7 @@
           <div class="form-group">
             <label for="articleBody">المحتوى</label>
             <textarea id="articleBody" class="form-control" placeholder="المحتوى" name="articleBody"
-                      ng-model="article.body" rows="2" required></textarea>
+                      ng-model="article.body" required msd-elastic></textarea>
           </div>
         </div>
         <div class="modal-footer">
