--- a/app/views/article.html
+++ b/app/views/article.html
@@ -23,7 +23,7 @@
     <div class="form-group" dir="rtl" ng-show="vm.isEditing()">
       <label class="sr-only" dir="rtl" for="articleBody">المحتوى</label>
       <textarea class="form-control" dir="rtl" id="articleBody" name="articleBody" ng-model="vm.article.body"
-                placeholder="المحتوى" required></textarea>
+                placeholder="المحتوى" required msd-elastic></textarea>
     </div>
   </div>
   <footer class="text-center">
