--- a/app/views/books_new.html
+++ b/app/views/books_new.html
@@ -2,13 +2,13 @@
   <h1 class="text-center" dir="rtl">إضافة كتاب</h1>
 </header>
 
-<section class="container" dir="rtl">
+<nav class="container" dir="rtl">
   <ol class="breadcrumb">
     <li><a href="#/">الصفحة الرئيسية</a></li>
     <li><a href="#/books">كتب</a></li>
     <li class="active">إضافة كتاب</li>
   </ol>
-</section>
+</nav>
 
 <section class="container">
   <form name="bookForm" ng-submit="vm.create(book)">
