--- a/app/views/books.html
+++ b/app/views/books.html
@@ -1,15 +1,13 @@
 <header class="page-header">
-  <header>
-    <h1 class="text-center" dir="rtl">كتب</h1>
-  </header>
+  <h1 class="text-center" dir="rtl">كتب</h1>
 </header>
 
-<section class="container" dir="rtl">
+<nav class="container" dir="rtl">
   <ol class="breadcrumb">
     <li><a href="#/">الصفحة الرئيسية</a></li>
     <li class="active">كتب</li>
   </ol>
-</section>
+</nav>
 
 <section class="container">
   <article class="panel panel-primary" ng-repeat="book in vm.books">
