--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -46,11 +46,11 @@
           <div class="form-group">
             <label for="articleTitle">العنوان</label>
             <input type="text" ng-model="article.title" name="articleTitle" class="form-control" id="articleTitle"
-                   placeholder="العنوان" required autofocus>
+                   required autofocus>
           </div>
           <div class="form-group">
             <label for="articleBody">المحتوى</label>
-            <textarea id="articleBody" class="form-control" placeholder="المحتوى" name="articleBody"
+            <textarea id="articleBody" class="form-control" name="articleBody"
                       ng-model="article.body" required msd-elastic></textarea>
           </div>
         </div>
