--- a/app/views/quotes.html
+++ b/app/views/quotes.html
@@ -51,7 +51,7 @@
         <div class="modal-body">
           <div class="form-group">
             <label for="quoteText">المحتوى</label>
-            <textarea id="quoteText" class="form-control" placeholder="المحتوى" name="quoteText"
+            <textarea id="quoteText" class="form-control" name="quoteText"
                       ng-model="quote.text" autofocus required msd-elastic></textarea>
           </div>
         </div>
