--- a/app/views/quotes.html
+++ b/app/views/quotes.html
@@ -33,34 +33,5 @@
 <hr>
 
 <footer class="container">
-  <button type="button" class="btn btn-success btn-lg btn-block"
-          id="newQuoteButton"
-          data-toggle="modal" data-target="#newQuoteModal">إضافة مقتطف</button>
+  <a href="#/quotes/new" class="btn btn-success btn-lg btn-block">إضافة مقتطف</a>
 </footer>
-
-<form ng-submit="quotesCtrl.create(quote)" name="createQuoteForm" dir="rtl">
-  <div class="modal fade" id="newQuoteModal" tabindex="-1" role="dialog" aria-labelledby="newQuoteModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="إغلاق">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <h4 class="modal-title text-center" id="newQuoteModalLabel">إضافة مقتطف</h4>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <label for="quoteText">المحتوى</label>
-            <textarea id="quoteText" class="form-control" name="quoteText"
-                      ng-model="quote.text" autofocus required msd-elastic></textarea>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <input type="submit" class="btn btn-success" value="إضافة مقتطف"
-                 ng-disabled="!createQuoteForm.$valid">
-          <button type="button" class="btn btn-default" data-dismiss="modal">إغلاق</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</form>
