--- a/app/views/article.html
+++ b/app/views/article.html
@@ -2,8 +2,8 @@
   <h1 class="text-center" dir="rtl" ng-bind="vm.article.title" ng-hide="vm.isEditing()"></h1>
   <div class="form-group container" dir="rtl" ng-show="vm.isEditing()">
     <label class="sr-only" dir="rtl" for="articleTitle">العنوان</label>
-    <input type="text" class="form-control" dir="rtl" id="articleTitle" name="articleTitle"
-           ng-model="vm.article.title" placeholder="العنوان" autofocus required>
+    <input type="text" class="form-control" dir="rtl" id="articleTitle" ng-model="vm.article.title"
+           placeholder="العنوان" autofocus required>
   </div>
 </header>
 
@@ -20,8 +20,8 @@
     <pre dir="rtl" ng-bind="vm.article.body" ng-hide="vm.isEditing()"></pre>
     <div class="form-group" dir="rtl" ng-show="vm.isEditing()">
       <label class="sr-only" dir="rtl" for="articleBody">المحتوى</label>
-      <textarea class="form-control" dir="rtl" id="articleBody" name="articleBody" ng-model="vm.article.body"
-                placeholder="المحتوى" required msd-elastic></textarea>
+      <textarea class="form-control" dir="rtl" id="articleBody" ng-model="vm.article.body" placeholder="المحتوى"
+                required msd-elastic></textarea>
     </div>
   </div>
   <footer class="text-center">
