--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -14,7 +14,7 @@
     <div class="panel-body text-center">
       <a ng-href="#/article/{{article.$id}}" dir="rtl" ng-bind="article.title"></a>
     </div>
-    <footer class="panel-footer text-center">
+    <footer class="panel-footer text-center" ng-show="vm.isAdmin()">
       <div class="btn-group">
         <button type="button" class="btn btn-sm btn-danger" ng-click="vm.articles.$remove(article)">حذف</button>
         <a ng-href="#/article/{{article.$id}}/edit" class="btn btn-sm btn-primary">تعديل</a>
@@ -23,8 +23,8 @@
   </article>
 </section>
 
-<hr>
+<hr ng-show="vm.isAdmin()">
 
-<footer class="container">
+<footer class="container" ng-show="vm.isAdmin()">
   <a href="#/articles/new" class="btn btn-success btn-lg btn-block">إضافة مقال</a>
 </footer>
