--- a/app/views/quotes.html
+++ b/app/views/quotes.html
@@ -12,19 +12,17 @@
 <section class="container text-center">
   <article class="panel panel-default" ng-repeat="quote in vm.quotes">
     <div class="panel-body" dir="rtl">
-      <pre ng-bind="quote.text" ng-hide="vm.isEditing(quote.$id)"></pre>
-      <div class="form-group" ng-show="vm.isEditing(quote.$id)">
-        <textarea dir="rtl" ng-model="quote.text" class="form-control" autofocus required msd-elastic></textarea>
+      <div dir="rtl" ng-bind-html="quote.text" ng-show="vm.isVisitor()"></div>
+      <div ng-show="vm.isAdmin()">
+        <textarea class="form-control" dir="rtl" autofocus required
+                  ng-model="quote.text" contenteditable="true" ckeditor>
+        </textarea>
       </div>
     </div>
     <div class="panel-footer" ng-show="vm.isAdmin()">
-      <div aria-label="إدارة مقتطف" class="btn-group" role="group" ng-show="vm.isEditing(quote.$id)">
+      <div aria-label="إدارة مقتطف" class="btn-group" role="group">
         <button type="button" class="btn btn-sm btn-danger" ng-click="vm.quotes.$remove(quote)">حذف</button>
-        <button type="button" class="btn btn-sm btn-primary" ng-click="vm.update(quote)">حفظ</button>
-      </div>
-      <div class="btn-group" role="group" aria-label="إدارة مقتطف" ng-hide="vm.isEditing(quote.$id)">
-        <button type="button" class="btn btn-sm btn-danger" ng-click="vm.quotes.$remove(quote)">حذف</button>
-        <button type="button" class="btn btn-sm btn-primary" ng-click="vm.edit(quote.$id)">تعديل</button>
+        <button type="button" class="btn btn-sm btn-primary" ng-click="vm.quotes.$save(quote)">حفظ</button>
       </div>
     </div>
   </article>
