--- a/app/views/article.html
+++ b/app/views/article.html
@@ -17,11 +17,11 @@
 
 <article>
   <div class="text-right container">
-    <pre dir="rtl" ng-bind="vm.article.body" ng-hide="vm.isEditing()"></pre>
+    <div dir="rtl" ng-bind-html="vm.article.body" ng-hide="vm.isEditing()"></div>
     <div class="form-group" dir="rtl" ng-show="vm.isEditing()">
       <label class="sr-only" dir="rtl" for="articleBody">المحتوى</label>
       <textarea class="form-control" dir="rtl" id="articleBody" ng-model="vm.article.body" placeholder="المحتوى"
-                required msd-elastic></textarea>
+                required ckeditor></textarea>
     </div>
   </div>
   <footer class="text-center" ng-show="vm.isAdmin()">
