--- a/app/views/books_new.html
+++ b/app/views/books_new.html
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group" dir="rtl">
       <label for="bookDescription">الوصف</label>
-      <textarea class="form-control" id="bookDescription" ng-model="book.description" msd-elastic></textarea>
+      <textarea class="form-control" id="bookDescription" ng-model="book.description" ckeditor></textarea>
     </div>
     <button type="submit" class="btn btn-block btn-lg btn-success" ng-disabled="bookForm.$invalid">إضافة الكتاب</button>
   </form>
